# coursedb-ai-12-week-learning-repo

./: .env.example  .gitignore  AI_USAGE_RULES.md  CONTRIBUTING.md  GETTING_STARTED.md  IMPLEMENTATION_VERIFICATION.md  LEARNING_LOG.md  LEARNING_PATH.md  Makefile  NAVIGATION_SYSTEM_GUIDE.md  PROJECT_SPEC.md  README.md  ROADMAP.md  SECURITY.md  START_HERE.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_2026_05_28.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: f0f92986b448_initial_schema.py
app/: README.md
app/api/: __init__.py  analytics.py  courses.py  dbms_demo.py  health.py  learning.py  questions.py  resources.py  search.py  topics.py
app/backend/: main.py
app/db/: database.py  models.py
app/frontend/: streamlit_app.py
app/schemas/: __init__.py
app/services/: README.md  __init__.py  analytics_service.py  chunking_service.py  embedding_service.py  learning_navigation_service.py  semantic_search_service.py  sql_search_service.py
app/tests/: README.md  conftest.py  test_database.py
data/: README.md
data/evaluation/: eval_queries.json
dbms_internals/: README.md
dbms_internals/bplus_tree/: README.md  bplus_tree.py
dbms_internals/hash_index/: README.md  hash_index.py
dbms_internals/query_plan/: README.md  query_plan_demo.sql
dbms_internals/transactions/: README.md  transaction_demo.sql  wait_for_graph.py
docs/: README.md  further_study.md
docs/architecture/: README.md  api_documentation.md  migrations.md  system_architecture.md
docs/er_diagrams/: README.md  coursedb_ai_er_design.md
docs/evaluation/: README.md  evaluation_report.md  performance_benchmarks.md  rubric.md  semantic_search_evaluation.md  semantic_search_results.md
docs/git_workflow/: git_workflow.md
docs/indexing/: README.md  bplus_tree_explanation.md  hash_index_explanation.md  indexing_notes.md  query_plan_analysis.md
docs/learning_navigation/: AI_BOUNDARIES.md  QUICK_START.md  README.md
docs/normalization/: README.md  anomaly_examples.md  fd_analysis.md  normalization_report.md
docs/portfolio/: README.md  demo_script.md  final_project_summary.md  portfolio_case_study.md  talking_points.md
docs/semantic_search/: README.md  embeddings_explained.md  semantic_search_report.md
docs/sql/: README.md  constraints_report.md  sql_query_catalog.md  views_and_triggers.md
docs/transactions/: README.md  acid_examples.md  concurrency_problems.md  transaction_notes.md
scripts/: README.md  generate_embeddings.py  init_db.sql  run_evaluation.py  seed_data.py  setup_db.py  smoke_test_semantic_search.py
weeks/week_01_dbms_foundations/: README.md  checkpoints.md  exercises.md  implementation_plan.md  mistakes_to_expect.md  primer.md  reflection.md  theory_notes.md
weeks/week_02_sql_basics/: README.md  checkpoints.md  exercises.md  exercises_blank.md  implementation_plan.md  mistakes_to_expect.md  queries_week2.sql  reflection.md  schema_week2.sql  seed_week2.sql  theory_notes.md
weeks/week_03_er_modeling/: README.md  checkpoints.md  exercises.md  exercises_relational_algebra.md  implementation_plan.md  mistakes_to_expect.md  reflection.md  theory_notes.md
weeks/week_04_normalization/: README.md  checkpoints.md  exercises.md  implementation_plan.md  mistakes_to_expect.md  reflection.md  theory_notes.md
weeks/week_05_postgresql_fastapi/: README.md  checkpoints.md  exercises.md  implementation_plan.md  mistakes_to_expect.md  reflection.md  (+1 more)
(+79 files in other folders)
